fix: Organizando arquivos, e ajustando visibilidade das fotos

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,3 +23,9 @@ img{
     width: 300px;
     height: 300px;
 }
+h1{
+    text-align: center;
+}
+h2 {
+    text-align: center;
+}
